k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookify-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bookify.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookify-frontend
                port:
                  number: 80
          - path: /loyalty
            pathType: Prefix
            backend:
              service:
                name: loyalty-service
                port:
                  number: 8084
          - path: /movie
            pathType: Prefix
            backend:
              service:
                name: movie-service
                port:
                  number: 8083
          - path: /theatre
            pathType: Prefix
            backend:
              service:
                name: theatre-service
                port:
                  number: 8082
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081
